[package]
name = "actionidmap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A HashMap that can be updated from a URL. Intended to be used to keep reverse-engineered API's in use even as private referenced ID's get updated."
readme = "README.md"
# to be honest, just guessing on all of thesez
keywords = ["reverse-engineer", "hashmap", "update"]
categories = ["web-programming::http-client", "data-structures", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoserde = "0.1.32"
time = "0.3.21"
ureq = "2.6.2"
